# VBT

./: .env.example  Cargo.toml  README.md  date_cache.json
.github/ISSUE_TEMPLATE/: book-request.md
.github/workflows/: Weekly.yml  ci.yml  daily.yml
crates/vbt/: Cargo.toml
feed/json/: 86__Eighty_Six.json  Inori_no_Kuni_no_Riviere.json  Majo_no_Tabitabi.json  Oobaa_Roodo.json
feed/rss/: 86:_Eighty_Six.rss  86__Eighty_Six.rss  Inori_no_Kuni_no_Riviere.rss  Majo_no_Tabitabi.rss  Oobaa_Roodo.rss  Otome_Game_no_Heroine_de_Saikyou_Survive.rss  Shokei_Shoujo_no_Virgin_Road.rss  Slime_Taoshite_300-nen,_Shiranai_Uchi_ni_Level_MAX_ni_Nattemashita.rss
src/: main.rs
src/discord/: wh.rs
src/file_ops/: rss_ops.rs
src/utils/: cache.rs  mod.rs
